# juris-flow-ai

./: .gitignore  main.py  pyproject.toml  requirements.txt
src/: config.py  llm.py
src/graph/: build.py  nodes.py  state.py
src/ingestion/: djen_client.py
src/models/: schemas.py
src/notifications/: email_sender.py  formatter.py
src/storage/: db.py
src/utils/: calendario.py
